# bpc_baseline

./: .gitignore  Inference Notebook.ipynb  README.md  download_data.sh  download_ipd_data.sh  package.xml  setup.cfg  setup.py  train_all_obj.sh  train_pose.py
bpc/inference/: epipolar_matching.py  process_pose.py  yolo_detection.py
bpc/inference/.ipynb_checkpoints/: process_pose-checkpoint.py
bpc/inference/utils/: camera_utils.py  triangulation.py
bpc/pose/: train.py
bpc/pose/models/: losses.py  simple_pose_net.py
bpc/pose/trainers/: trainer.py
bpc/utils/: data_utils.py
bpc/yolo/: prepare_data.py  train.py
bpc/yolo/configs/: data_obj_10.yaml  data_obj_11.yaml  data_obj_8.yaml
datasets/: datasets_README.md
docker/: Dockerfile  requirements.txt
inference/: epipolar_matching.py  match_pipeline.py  process_pose.py  yolo_detection.py
pose/: train.py
pose/models/: losses.py
pose/trainers/: trainer.py
pose_output/: final_6d_pose.csv
utils/: data_utils.py  obj_match.py
yolo/: prepare_data.py  train.py
yolo/configs/: data_obj_11.yaml
