<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bpc_baseline</name>
  <version>0.0.0</version>
  <description>Baseline solution for Perception Challenge For Bin-Picking.</description>
  <maintainer email="todo@todo.com">Agastya Karla</maintainer>
  <license>Apache license 2.0</license>

  <!-- TODO: Update other dependencies -->
  <exec_depend>python3-scipy</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>